# novel_gpt

./: .claudecode.json  .gitignore  CLAUDE.md  README.md  production.md  pyproject.toml
data/: 1661-0.txt  35-0.txt  98-0.txt  chinese_fantasy_01.txt  chinese_romance_01.txt  chinese_urban_01.txt  chinese_wuxia_01.txt  chinese_wuxia_02.txt  chinese_xiuxian_01.txt  chinese_xiuxian_02.txt  novels_combined.txt
docs/: ARCHITECTURE_COMPARISON.md  SRC_LAYOUT.md  TROUBLESHOOTING.md
schema/: task_chinese_data_260308_154734.md
src/: __init__.py  __main__.py  config.py  data.py  generate.py  main.py  model.py  tokenizer.py  train.py
